--- a/css/styles.css
+++ b/css/styles.css
@@ -531,12 +531,11 @@ h3 {
 h4 {
   font-size: 18px;
   margin-bottom: 10px;
-  line-height: 1.2;
+  line-height: 1.4;
   text-transform: uppercase; }
   @media screen and (min-width: 1139px) {
     h4 {
-      font-size: 20px;
-      line-height: 1.3; } }
+      font-size: 20px; } }
 
 p {
   font-size: 18px;
